--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <iframe style="height: 100vh; width: 100%;" src="https://nazoltej.com" frameborder="0"></iframe>
+    <iframe title="web-3" style="height: 100vh; width: 100%; margin: 0; padding: 0;" src="https://nazoltejwww.netlify.app/adm/"
+        frameborder="0"></iframe>
 </body>
+
 </html>
