--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <iframe title="web-3" style="height: 100vh; width: 100%; margin: 0; padding: 0;" src="https://nazoltejwww.netlify.app/adm/"
+    <iframe title="web-3" style="height: 100vh; width: 100%; margin: 0; padding: 0;" src="https://nazoltejwww.netlify.app/no-csp-iframe"
         frameborder="0"></iframe>
 </body>
 
